[package]
name = "sparqlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oxigraph = "0.3.19"
spargebra = "*"
clap = { version = "4.4.2", features = ["derive"] }
serde_json = "1.0.105"
serde = "*"
serde_derive = "*"
regex = "1.9.5"
prettytable-rs = "^0.10"
rustyline = { version = "13.0.0", features = ["derive"] }

